--- a/_config.yml
+++ b/_config.yml
@@ -6,30 +6,30 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Webjeda Purple
-email: your-email@domain.com
+title: 旅するマルチポテンシャライト
 description: > # this means to ignore newlines until "baseurl:"
-  Webjeda Purple is a minimal theme built on default jekyll theme. It is very light highly customizable. Suitable for minimal blogs.
+  自由に旅をしながら情熱と意味を持って仕事を生み出すマルチポテンシャライト、起業家、ノマドワーカーたちを世界中で取材し発信するサイト。
+keywords: > # this means to ignore newlines until "baseurl:"
+  マルチポテンシャライト、起業家、ノマドワーカー、ノマド、旅、仕事、就活、新卒、情熱、意味、生み出す、作り出す、世界、取材、動画。
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://webjeda.com" # the base hostname & protocol for your site #footer built by link
-built-by: webjeda #footer button text
+url: "http://multipotnomad.github.io" # the base hostname & protocol for your site #footer built by link
 
 
-baseurl: "/purple"
+baseurl: "/multipotnomad"
 permalink: /:title/
 
 #color scheme - Purple theme
 color-1: '#6a3093'
-color-2: '#a044ff' 
+color-2: '#a044ff'
 
-#Endless-River theme - remove the '#' 
+#Endless-River theme - remove the '#'
 #color-1: '#155799'
-#color-2: '#159957' 
+#color-2: '#159957'
 
 #footer icons
-f: webjeda  # facebook username
-t: webjeda  # twitter handle
-g: sharu725 # github username
+f: mizuki.kawano.96  # facebook username
+t: multipotnomad  # twitter handle
+i: mizuki._.chi # instagram username
 
 # Build settings
 markdown: kramdown
@@ -37,5 +37,7 @@ sass:
     style: compressed
 
 #Other
-analytics: 'UA-83979019-1'
+# analytics: 'UA-83979019-1'
 disqus-shortname: webjeda-sample    #Disqus comments
+
+plugins: jekyll-sitemap
