Change: initial setups

--- a/_config.yml
+++ b/_config.yml
@@ -40,4 +40,5 @@ sass:
 # analytics: 'UA-83979019-1'
 disqus-shortname: webjeda-sample    #Disqus comments
 
-plugins: jekyll-sitemap
+plugins:
+  - jekyll-sitemap
