change: color-1 etc

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "http://multipotnomad.github.io" # the base hostname & protocol for your si
 permalink: /:title/
 
 #color scheme - Purple theme
-color-1: '#6a3093'
+color-1: '#093377'
 color-2: '#d0c8c8'
 
 #Endless-River theme - remove the '#'
