add: gulp resize

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^1.0.2",
+    "gulp-image-resize": "^0.13.0",
     "gulp-imagemin": "^4.1.0",
     "run-sequence": "^2.2.1"
   }
