--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ sass:
     style: compressed
 
 #Other
-# analytics: 'UA-83979019-1'
+analytics: 'UA-122836174-1'
 # disqus-shortname: multipotnomad    #Disqus comments
 
 plugins:
